fix: Spacing for all divs

--- a/uikit-tryout/css/style.css
+++ b/uikit-tryout/css/style.css
@@ -4,3 +4,7 @@ body {
   font-weight: bold;
   font-variant: small-caps;
 }
+
+div {
+  margin: 1em;
+}
